// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pipeline render > pipeline-entites 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`pipeline render > pipeline-react-utils 1`] = `<div />`;

exports[`pipeline render > should pipeline rendered 1`] = `
<DocumentFragment>
  <div
    class="gedit-playground-container"
  >
    <div
      class="gedit-playground"
      data-testid="sdk.workflow.canvas"
      tabindex="0"
    >
      <div
        class="gedit-playground-pipeline"
      />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pipeline render > should pipeline rendered with flowContainer 1`] = `
<DocumentFragment>
  <div
    class="gedit-playground-container"
  >
    <div
      class="gedit-playground"
      data-testid="sdk.workflow.canvas"
      tabindex="0"
    >
      <div
        class="gedit-playground-pipeline"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pipeline render > should pipeline rendered with playgroundContext 1`] = `
<DocumentFragment>
  <div
    class="gedit-playground-container"
  >
    <div
      class="gedit-playground"
      data-testid="sdk.workflow.canvas"
      tabindex="0"
    >
      <div
        class="gedit-playground-pipeline"
      />
    </div>
  </div>
</DocumentFragment>
`;
